# multi-tenant-saas-bootstrapper-fastapi

./: .gitignore  README.md  multitenant_Integration.md  package-lock.json  pyproject.toml
backend/: Dockerfile  requirements.txt  reset_db.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/: fe82aafc4571_initial_fastapi_migration.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routers/: admin.py  auth.py  billing.py  features.py  tenants.py
backend/app/core/: config.py  flags.py  middleware.py  plans.py  rls.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  domain.py
backend/app/rls/: __init__.py
backend/app/schemas/: admin.py  auth.py  billing.py  features.py  tenants.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: FeatureGate.css  FeatureGate.jsx  PlanBadge.jsx  PrivateRoute.jsx  SuperadminRoute.jsx
frontend/src/context/: TenantContext.jsx
frontend/src/hooks/: useBilling.js  useFeatureFlag.js  useTenant.js
frontend/src/pages/Dashboard/: Dashboard.css  index.jsx
frontend/src/pages/Login/: Login.css  index.jsx
frontend/src/pages/Onboarding/: Onboarding.css  index.jsx
frontend/src/pages/Superadmin/: Superadmin.css  index.jsx
src/multi_tenant_bootstrapper/: __init__.py  app_factory.py  config.py  seed.py
src/multi_tenant_bootstrapper/api/: __init__.py  dependencies.py
src/multi_tenant_bootstrapper/api/routers/: __init__.py  admin.py  auth.py  billing.py  features.py  tenants.py
src/multi_tenant_bootstrapper/core/: __init__.py  flags.py  middleware.py  plans.py  rls.py  security.py
src/multi_tenant_bootstrapper/db/: session.py
src/multi_tenant_bootstrapper/migrations/: alembic.ini  env.py
src/multi_tenant_bootstrapper/models/: __init__.py  base.py  domain.py
src/multi_tenant_bootstrapper/schemas/: admin.py  auth.py  billing.py  features.py  tenants.py
