[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-tenant-bootstrapper"
version = "1.0.0"
description = "A plug-and-play multi-tenant SaaS bootstrapper for FastAPI — installable, configurable, and extensible."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "SaaS Bootstrapper Contributors"},
]
keywords = ["fastapi", "multi-tenant", "saas", "bootstrapper", "rbac", "rls"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.28.0",
    "alembic>=1.12.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/multi-tenant-bootstrapper-fastapi"
Documentation = "https://github.com/your-org/multi-tenant-bootstrapper-fastapi#readme"
Repository = "https://github.com/your-org/multi-tenant-bootstrapper-fastapi"
Issues = "https://github.com/your-org/multi-tenant-bootstrapper-fastapi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_tenant_bootstrapper"]

[tool.hatch.build.targets.wheel.force-include]
"src/multi_tenant_bootstrapper/migrations" = "multi_tenant_bootstrapper/migrations"
"src/multi_tenant_bootstrapper/frontend/dist" = "multi_tenant_bootstrapper/frontend/dist"
